--- a/Packlists/Packlists.csproj
+++ b/Packlists/Packlists.csproj
@@ -137,11 +137,16 @@
     <Compile Include="Migrations\201808301340366_Initial.Designer.cs">
       <DependentUpon>201808301340366_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809030918231_PacklisteItemsChanges.cs" />
+    <Compile Include="Migrations\201809030918231_PacklisteItemsChanges.Designer.cs">
+      <DependentUpon>201809030918231_PacklisteItemsChanges.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DataService.cs" />
     <Compile Include="Model\Day.cs" />
     <Compile Include="Model\EditableModelBase.cs" />
     <Compile Include="Model\IDataService.cs" />
+    <Compile Include="Model\ItemWithQty.cs" />
     <Compile Include="Model\Printing\IPrintingService.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Material.cs" />
@@ -209,6 +214,9 @@
     </Compile>
     <EmbeddedResource Include="Migrations\201808301340366_Initial.resx">
       <DependentUpon>201808301340366_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809030918231_PacklisteItemsChanges.resx">
+      <DependentUpon>201809030918231_PacklisteItemsChanges.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
