--- a/Packlists/Packlists.csproj
+++ b/Packlists/Packlists.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Converters\MaterialsToColorConverter.cs" />
     <Compile Include="Converters\PacklistsToColorConverter.cs" />
     <Compile Include="Converters\ValueTupleConverter.cs" />
+    <Compile Include="DependencyProperties\DatePickerCalendar.cs" />
     <Compile Include="DependencyModule.cs" />
     <Compile Include="ExcelImport\ImportItems.cs" />
     <Compile Include="ExcelImport\ImportPackliste.cs" />
@@ -140,6 +141,10 @@
     <Compile Include="Migrations\201809030918231_PacklisteItemsChanges.cs" />
     <Compile Include="Migrations\201809030918231_PacklisteItemsChanges.Designer.cs">
       <DependentUpon>201809030918231_PacklisteItemsChanges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201809040830160_PacklisteDestination.cs" />
+    <Compile Include="Migrations\201809040830160_PacklisteDestination.Designer.cs">
+      <DependentUpon>201809040830160_PacklisteDestination.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DataService.cs" />
@@ -217,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809030918231_PacklisteItemsChanges.resx">
       <DependentUpon>201809030918231_PacklisteItemsChanges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809040830160_PacklisteDestination.resx">
+      <DependentUpon>201809040830160_PacklisteDestination.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
