--- a/Packlists/Packlists.csproj
+++ b/Packlists/Packlists.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.4.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -102,6 +103,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AttachedProperties\DialogCloser.cs" />
+    <Compile Include="Converters\KeyboardEventArgsToKeyConverter.cs" />
     <Compile Include="Converters\MaterialsToColorConverter.cs" />
     <Compile Include="Converters\PacklistsToColorConverter.cs" />
     <Compile Include="Converters\ValueTupleConverter.cs" />
