--- a/Packlists/App.config
+++ b/Packlists/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Packlists.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
@@ -25,4 +28,44 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Packlists.Properties.Settings>
+      <setting name="MainWidth" serializeAs="String">
+        <value>1550</value>
+      </setting>
+      <setting name="MainHeight" serializeAs="String">
+        <value>1000</value>
+      </setting>
+      <setting name="MainTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MainLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="ItemWidth" serializeAs="String">
+        <value>600</value>
+      </setting>
+      <setting name="ItemHeight" serializeAs="String">
+        <value>450</value>
+      </setting>
+      <setting name="ItemLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="ItemTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MaterialHeight" serializeAs="String">
+        <value>600</value>
+      </setting>
+      <setting name="MaterialWidth" serializeAs="String">
+        <value>450</value>
+      </setting>
+      <setting name="MaterialLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MaterialTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </Packlists.Properties.Settings>
+  </userSettings>
 </configuration>
