--- a/Packlists/packages.config
+++ b/Packlists/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="EPPlus" version="4.5.2.1" targetFramework="net451" />
+  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net451" />
   <package id="MvvmDialogs" version="5.1.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.4.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
