--- a/Packlists/App.config
+++ b/Packlists/App.config
@@ -31,10 +31,10 @@
   <userSettings>
     <Packlists.Properties.Settings>
       <setting name="MainWidth" serializeAs="String">
-        <value>1550</value>
+        <value>800</value>
       </setting>
       <setting name="MainHeight" serializeAs="String">
-        <value>1000</value>
+        <value>600</value>
       </setting>
       <setting name="MainTop" serializeAs="String">
         <value>0</value>
@@ -64,6 +64,18 @@
         <value>0</value>
       </setting>
       <setting name="MaterialTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="ImportHeight" serializeAs="String">
+        <value>600</value>
+      </setting>
+      <setting name="ImportWidth" serializeAs="String">
+        <value>450</value>
+      </setting>
+      <setting name="ImportLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="ImportTop" serializeAs="String">
         <value>0</value>
       </setting>
     </Packlists.Properties.Settings>
