--- a/Packlists/Properties/Settings.settings
+++ b/Packlists/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="MainWidth" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">1550</Value>
+      <Value Profile="(Default)">800</Value>
     </Setting>
     <Setting Name="MainHeight" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">1000</Value>
+      <Value Profile="(Default)">600</Value>
     </Setting>
     <Setting Name="MainTop" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
@@ -36,6 +36,18 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="MaterialTop" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ImportHeight" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">600</Value>
+    </Setting>
+    <Setting Name="ImportWidth" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">450</Value>
+    </Setting>
+    <Setting Name="ImportLeft" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ImportTop" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
