--- a/Packlists/packages.config
+++ b/Packlists/packages.config
@@ -4,10 +4,12 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="EPPlus" version="4.5.2.1" targetFramework="net451" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net451" />
+  <package id="FreeSpire.PDF" version="4.3.1" targetFramework="net451" />
   <package id="MvvmDialogs" version="5.1.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.4.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Ninject" version="3.3.4" targetFramework="net451" />
+  <package id="PDFsharp-MigraDoc" version="1.50.4845-RC2a" targetFramework="net451" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net451" />
   <package id="Z.EntityFramework.Extensions" version="3.15.17" targetFramework="net451" />
 </packages>
