--- a/Packlists/packages.config
+++ b/Packlists/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
-  <package id="EPPlus" version="4.5.2.1" targetFramework="net451" />
+  <package id="EPPlus" version="4.5.3.1" targetFramework="net451" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net451" />
   <package id="FreeSpire.PDF" version="4.3.1" targetFramework="net451" />
+  <package id="Gu.Wpf.DataGrid2D" version="0.2.1.6" targetFramework="net451" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net451" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net451" />
   <package id="MvvmDialogs" version="5.2.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.4.1" targetFramework="net451" />
   <package id="Ninject" version="3.3.4" targetFramework="net451" />
