Searchablematerials when adding imports

--- a/Packlists/App.config
+++ b/Packlists/App.config
@@ -16,6 +16,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+  <add name="PacklisteContext"  
+        providerName="System.Data.SqlClient"  
+        connectionString="Server=172.25.194.33\SQLEXPRESS;Database=Packlists.Model.PacklisteContext;User Id=testuser;Password=haslo1"/>
+</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
