Fixed an issue with adding new material

--- a/Packlists/App.config
+++ b/Packlists/App.config
@@ -19,7 +19,7 @@
   <connectionStrings>
   <add name="PacklisteContext"  
         providerName="System.Data.SqlClient"  
-        connectionString="Server=.\SQLEXPRESS;Database=Packlists.Model.PacklisteContext;User Id=testuser;Password=haslo1"/>
+        connectionString="Server=172.25.194.30,1433;Database=Packlists.Model.PacklisteContext;User Id=testuser;Password=haslo1"/>
 </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
