Added item details and packing list details

--- a/Packlists.WebUi/Packlists.WebUi.csproj
+++ b/Packlists.WebUi/Packlists.WebUi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Packilists.DataAccess\Packilists.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\Components\" />
+  </ItemGroup>
+
 </Project>
