--- a/.gitignore
+++ b/.gitignore
@@ -259,4 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/PacklistsWeb.API/appsettings.Development.json
+**/appsettings.Development.json
