Added docker support

--- a/PacklistsWebUI/PacklistsWebUI.csproj
+++ b/PacklistsWebUI/PacklistsWebUI.csproj
@@ -2,15 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Remove="appsettings.Debug.json" />
+    <Content Remove="appsettings.registry.hub.docker.com_dickmarcinko.json" />
     <Content Remove="appsettings.Release.json" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="appsettings.Debug.json">
+      <IsTransformFile>true</IsTransformFile>
+      <DependentUpon>appsettings.json</DependentUpon>
+    </None>
+    <None Include="appsettings.registry.hub.docker.com_dickmarcinko.json">
       <IsTransformFile>true</IsTransformFile>
       <DependentUpon>appsettings.json</DependentUpon>
     </None>
@@ -23,6 +29,7 @@
 <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.35" />
       <PackageReference Include="EPPlus" Version="4.5.3.3" />
+      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
       <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
