--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ paket-files/
 __pycache__/
 *.pyc
 **/appsettings.Development.json
+/PacklistsWebUI/appsettings.registry.hub.docker.com_dickmarcinko.json
