--- a/PacklistsWebUI/PacklistsWebUI.csproj
+++ b/PacklistsWebUI/PacklistsWebUI.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <ContainerDevelopmentMode>Regular</ContainerDevelopmentMode>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,6 +29,7 @@
 <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.35" />
       <PackageReference Include="EPPlus" Version="4.5.3.3" />
+      <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
       <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
         <PrivateAssets>all</PrivateAssets>
